--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,9 +20,11 @@
     </div>
 </div>
 <div style="text-align: center">Type stuff here: <br/><textarea id="mooosage" onkeydown="check_send(this);"></textarea>
-    <input type="button" value="Send" onclick="check_send(document.getElementById('mooosage'), true);">
+    <input type="button" value="Send" onclick="check_send(document.getElementById('mooosage'), true);"><hr/>
+    <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();"><br/>
+    <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
 </div>
-<input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
+
 
 <script src="/js/mm.js" type="application/ecmascript"></script>
 </body>
