modalize the invite link

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,6 +25,12 @@
     <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
 </div>
 
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="modal_text">Some text in the Modal..</p>
+    </div>
+</div>
 
 <script src="/js/mm.js" type="application/ecmascript"></script>
 </body>
