tweak user list, add icon

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -15,8 +15,11 @@
     </ul>
 </div>
 <div id="main">
-    <div id="counter">
+    <div id="userlist_wrapper">
+        <h1>Currently online:</h1>
+    <ul id="userlist">
 
+    </ul>
     </div>
 </div>
 <div style="text-align: center">Type stuff here: <br/><textarea id="mooosage" onkeydown="check_send(this);"></textarea>
