count people in user list

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,7 +16,7 @@
 </div>
 <div id="main">
     <div id="userlist_wrapper">
-        <h1>Currently online:</h1>
+        <h1>Currently online (<span id="counter">?</span>):</h1>
     <ul id="userlist">
 
     </ul>
