rearrange and tweak sidebar, move room list to left

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,16 +10,19 @@
     <img src="/images/logo.png"/>
 </div>
 <div id="credentials"></div>
-<div id="action_picker">
-    <ul id="chanpicker">
-    </ul>
-</div>
 <div id="main">
-    <div id="userlist_wrapper">
-        <h1>Currently online (<span id="counter">?</span>):</h1>
-    <ul id="userlist">
+    <div id="sidebar">
+        <div id="action_picker">
+            <ul id="chanpicker">
+            </ul>
+        </div>
+        <div id="userlist_wrapper">
 
-    </ul>
+            <h1>Currently online (<span id="counter">?</span>):</h1>
+            <ul id="userlist">
+
+            </ul>
+        </div>
     </div>
 </div>
 <div style="text-align: center">Type stuff here: <br/><textarea id="mooosage" onkeydown="check_send(this);"></textarea>
