--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,7 +27,9 @@
 </div>
 <div style="text-align: center">Type stuff here: <br/><textarea id="mooosage" onkeydown="check_send(this);"></textarea>
     <input type="button" value="Send" onclick="check_send(document.getElementById('mooosage'), true);"><hr/>
-    <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();"><br/>
+    <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();">
+    <input type="button" value="Assign proxies" id="assign_proxies" style="display: none;" onclick="assign_proxies();">
+    <br/>
     <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
 </div>
 
