--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,6 +29,7 @@
     <input type="button" value="Send" onclick="check_send(document.getElementById('mooosage'), true);"><hr/>
     <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();">
     <input type="button" value="Assign proxies" id="assign_proxies" style="display: none;" onclick="assign_proxies();">
+    <input type="button" value="Export logs" id="export" style="display: none;" onclick="window.open('/export', '_blank');">
     <br/>
     <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
 </div>
