--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,6 +10,7 @@
     <img src="/images/logo.png"/>
 </div>
 <div id="credentials"></div>
+<div id="quorum"></div>
 <div id="main">
     <div id="sidebar">
         <div id="action_picker">
