--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,6 +42,7 @@
     </div>
 </div>
 
+<script src="/js/moment.min.js" type="application/ecmascript"></script>
 <script src="/js/mm.js" type="application/ecmascript"></script>
 </body>
 </html>
