--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,6 +25,7 @@
             </ul>
         </div>
     </div>
+    <div id="channels"></div>
 </div>
 <div style="text-align: center">Type stuff here: <br/><textarea id="mooosage" onkeydown="check_send(this);"></textarea>
     <input type="button" value="Send" onclick="check_send(document.getElementById('mooosage'), true);"><hr/>
