Add tribute for autocompleting nicks

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,6 +44,7 @@
 </div>
 
 <script src="/js/moment.min.js" type="application/ecmascript"></script>
+<script src="/js/tribute.min.js" type="application/ecmascript"></script>
 <script src="/js/mm.js" type="application/ecmascript"></script>
 </body>
 </html>
