--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,7 +42,7 @@
                 <div class="chat">
 
                     <div class="chat-history">
-                        <ul class="m-b-0" id="channels">
+                        <ul class="mb-0" id="channels">
                         </ul>
                     </div>
                     <div style="text-align: center;">
