Note that this supports multi-line messaging

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,7 +51,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-send"></i></span>
                                 </div>
-                                <textarea id="mooosage" class="form-control" onkeydown="check_send(this);" placeholder="Write your message here..."></textarea>
+                                <textarea id="mooosage" class="form-control" onkeydown="check_send(this);" placeholder="Write your message here. You can use shift+enter for multiline messages."></textarea>
                             </div>
                         </div>
                         <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();">
