design tweaks to top and buttons

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -12,7 +12,7 @@
     <div class="row clearfix">
         <div class="col-lg-12">
             <div id="header">
-                <img src="/images/logo.png"/>
+                <h3>ASF Members Meeting</h3>
             </div>
         </div>
     </div>
@@ -54,9 +54,9 @@
                                 <textarea id="mooosage" class="form-control" onkeydown="check_send(this);" placeholder="Write your message here. You can use shift+enter for multiline messages."></textarea>
                             </div>
                         </div>
-                        <input type="button" value="Invite a guest" id="invite" style="display: none;" onclick="invite();">
-                        <input type="button" value="Proxies" id="assign_proxies" style="display: none;" onclick="assign_proxies();">
-                        <input type="button" value="Export logs" id="export" style="display: none;" onclick="window.open('/export', '_blank');">
+                        <input type="button" class="btn btn-primary" value="Invite a guest" id="invite" style="display: none;" onclick="invite();">
+                        <input type="button" class="btn btn-primary" value="Proxies" id="assign_proxies" style="display: none;" onclick="assign_proxies();">
+                        <input type="button" class="btn btn-info" value="Export logs" id="export" style="display: none;" onclick="window.open('/export', '_blank');">
                         <br/>
                         <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
                     </div>
