add a little space between checkbox and label

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -59,7 +59,7 @@
                         <input type="button" class="btn btn-primary" value="Proxies" id="assign_proxies" style="display: none;" onclick="assign_proxies();">
                         <input type="button" class="btn btn-info" value="Export logs" id="export" style="display: none;" onclick="window.open('/export', '_blank');">
                         <br/>
-                        <input type="checkbox" id="notify"><label for="notify">Enable notifications</label>
+                        <input type="checkbox" id="notify"><label for="notify">&nbsp;Enable notifications</label>
                     </div>
                 </div>
             </div>
