hide modals on escape key press

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -33,7 +33,7 @@
                                 <input type="button" class="btn btn-primary" value="Proxies" id="assign_proxies" onclick="assign_proxies();">
                                 <input type="button" class="btn btn-primary" value="Export Logs" id="export" onclick="window.open('/export', '_blank');">
                                 <input type="button" onclick="location.href='/preferences?logout=true';" class="btn btn-danger" value="Sign out">
-                                <input type="button" class="btn btn-success" value="Cheat Sheet / Help" id="cheat" onclick="$('#modal_help').show()">
+                                <input type="button" class="btn btn-success" value="Cheat Sheet / Help" id="cheat" onclick="$('#modal_help').toggle();">
                             </div>
                         </div>
 
