add additional formatting support

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,6 +91,9 @@
             <ul>
         <li>You can keep messages off-the-record by prepending [off] to them.</li>
         <li>You can mention (notify) someone by typing <kbd>@asf-id</kbd> in your message, where asf-id is their ASF userid, for instance <kbd>@humbedooh</kbd>.</li>
+        <li>You can make text <i>italic</i> with <kbd>_text here_</kbd> or <kbd>*text here*</kbd>.</li>
+        <li>You can make text <b>bold</b> with <kbd>__text here__</kbd> or <kbd>**text here**</kbd>.</li>
+        <li>Link highlighting is supported</li>
     </ul>
         </p>
     </div>
