Port to asfquart framework
Still some tweaks to be done, but this removes the AHAPI dependency.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -103,6 +103,6 @@
 <script src="/js/tribute.min.js" type="application/ecmascript" integrity="sha384-3E2PkQRCdPVWYDHSTKFXkBuGxBa9CHBOtqGVzNjszfcrjGiY3hCZa5rlpbIkU5bL"></script>
 <script src="/js/jquery.js" type="application/ecmascript" integrity="sha384-wsqsSADZR1YRBEZ4/kKHNSmU+aX8ojbnKUMN4RyD3jDkxw5mHtoe2z/T/n4l56U/"></script>
 <script src="/js/bootstrap.bundle.js" type="application/ecmascript" integrity="sha384-5xO2n1cyGKAe630nacBqFQxWoXjUIkhoc/FxQrWM07EIZ3TuqkAsusDeyPDOIeid"></script>
-<script src="/js/mm.js" type="application/ecmascript"></script>
+<script src="/js/mm.js?1" type="application/ecmascript"></script>
 </body>
 </html>
