cut away cruft we don't use, just log audit trail

--- a/htdocs/oauth.html
+++ b/htdocs/oauth.html
@@ -9,7 +9,7 @@
 <div id="login">
     <img src="/images/logo.png" style="width:94%; margin: 3%;"/><hr/>
     <h2>Sign in with:</h2>
-    <a href="/oauth_asf?login=/"><img src="/images/oauth_asf.png"/></a>
+    <a href="/oauth_asf?login=/oauth?provider=asf%26step=callback"><img src="/images/oauth_asf.png"/></a>
 </div>
 <script src="/js/mm.js" type="application/ecmascript"></script>
 </body>
