Update index.html, better placeholder text
This solves #39

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -64,7 +64,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" style="height: 56px;"><i class="fa fa-send"></i></span>
                                 </div>
-                                <textarea id="mooosage" class="form-control" style="height: 56px;" onkeydown="check_send(this);" placeholder="Write your message here. You can use shift+enter for multiline messages."></textarea>
+                                <textarea id="mooosage" class="form-control" style="height: 56px;" onkeydown="check_send(this);" placeholder="Write your message here, press Enter to send it. You can use Shift+Enter to insert a newline in your message."></textarea>
                             </div>
                         </div>
                         <input type="checkbox" id="notify"><label for="notify">&nbsp;Enable notifications</label>
